--- a/working/KreutzPFAS/AKdata-Sep2022.Rmd
+++ b/working/KreutzPFAS/AKdata-Sep2022.Rmd
@@ -811,7 +811,12 @@ dim(UC.data)
     
     # No cal curve 4NT (Nom.Conc >0, Area = 0):
     which.rows <- level2$Lab.Sample.Name == "4NT" & level2$Area == 0
-    level2[which.rows,"Verified"] <- "JFW: likely not analyzed"
+    level2[which.rows,"Verified"] <- "JFW: Excluded, likely not analyzed"
+    
+    # Can't work without peak for ISTD:
+    which.rows <- level2$ISTD.Area == 0
+    level2[which.rows,"Verified]"] <- "JFw: Excluded, no ISTD peak"
+    
     
     write.table(level2,
       file="KreutzPFAS-PPB-UC-Level2.tsv",
