--- a/working/KreutzPFAS/AKdata-Sep2022.Rmd
+++ b/working/KreutzPFAS/AKdata-Sep2022.Rmd
@@ -815,7 +815,7 @@ dim(UC.data)
     
     # Can't work without peak for ISTD:
     which.rows <- level2$ISTD.Area == 0
-    level2[which.rows,"Verified"] <- "JFw: Excluded, no ISTD peak"
+    level2[which.rows,"Verified]"] <- "JFw: Excluded, no ISTD peak"
     
     
     write.table(level2,
@@ -838,7 +838,7 @@ dim(UC.data)
 # Bayesian analysis:
 ```{r Bayes, eval=TRUE}
     
-    library(invitroTKstats)
+    library(invitroTKstats) 
     setwd("c:/users/jwambaug/git/invitroTKstats/working/KreutzPFAS/")
-    level4 <- calc_fup_uc(FILENAME="KreutzPFAS", NUM.CORES=12) 
+    level4 <- calc_fup_uc(FILENAME="KreutzPFAS",JAGS.PATH="C:/Users/jwambaug/AppData/Local/Programs/JAGS/JAGS-4.3.1/x64") 
 ```
